Add left, right side panels, and post partial views; implement news API service and validation scripts

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,6 +5,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "NewsApi": {
+    "ApiKey": "64344d15a0e84b92ac8b04143f4d833e",
+    "BaseUrl": "https://newsapi.org/v2/",
+    "MaxArticlesPerFetch": "50",
+    "FetchIntervalHours": "24"
   }
 }
 
