more tests on the post

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,8 @@ appsettings.Development.json
 /ADMIN_API_DOCUMENTATION.md
 /ADMIN_API_TROUBLESHOOTING.md
 /ADMIN_CONTROLLER_SUMMARY.md
+/CODEBASE_ANALYSIS.md
+/DEBUGGING_STATUS.md
+/ENHANCED_POST_ARCHITECTURE.md
+/ENHANCED_SYSTEM_IMPLEMENTATION.md
+/ISSUES_RESOLVED.md
